# tv-tuner

./: .gitignore  README.md  pyproject.toml
src/rootext/display/: DisplaySpec.hh  Painter.cc  View.hh  View1D.hh  View2D.hh  Viewer.cc  Viewer.hh  XMarker.cc
src/rootext/fit/: Integral.hh  Util.hh
src/rootext/mfile-root/mfile/: CMakeLists.txt
src/rootext/mfile-root/mfile/src/: disk_access.c  gf2_minfo.c  mopen.c  oldmat_minfo.c
src/tv_tuner/: app.py  calibration.py  display.py  fit.py  mfile_root.py
src/tv_tuner/rootext/: CMakeLists.txt
src/tv_tuner/rootext/calibration/: Calibration.hh
src/tv_tuner/rootext/display/: CMakeLists.txt  DisplayObj.hh  View.hh  View1D.cc  View2D.cc
src/tv_tuner/rootext/mfile-root/matop/: matop_conv.c  matop_project.c
src/tv_tuner/rootext/mfile-root/mfile/include/: mfile.h
src/tv_tuner/rootext/mfile-root/mfile/src/: converters.c  lc_getput.c  shm_access.c
